# tree-sitter-unified-diff

./: .clang-tidy  .gitignore  AGENTS.md  CMakeLists.txt  README.md  grammar.js  package.json  style.md  tree-sitter.json
docs/: unified_diff_parser_api.md  unified_diff_tree_spec.md
examples/: unified_diff_example.c
include/: unified_diff_parser.h
queries/: highlights.scm
src/: grammar.json  main.c  node-types.json  parser.c  unified_diff_parser.c
test/corpus/: unified_diff.txt
tests/: unified_diff_tests.c
